--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Alumno.cs" />
     <Compile Include="AsignarMaterias.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Materia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
