--- a/ML/ML.csproj
+++ b/ML/ML.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Alumno.cs" />
     <Compile Include="AsignarMateria.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Materia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
