--- a/PL2/PL2.csproj
+++ b/PL2/PL2.csproj
@@ -243,6 +243,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\login.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -268,6 +269,8 @@
     <Content Include="Views\AlumnoMateria\GetAlMateriaAsignadasByIdAlumno.cshtml" />
     <Content Include="Views\AlumnoMateria\GetAlMateriaNoAsignadasByIdAlumno.cshtml" />
     <Content Include="Views\AlumnoMateria\Modal.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
